avoid dropdown menu icon overlapping

--- a/source/stylesheets/organisms/_header.css.scss
+++ b/source/stylesheets/organisms/_header.css.scss
@@ -7,7 +7,7 @@
     h1 {
       text-align: inherit;
       a {
-        width: inherit;
+        width: 80%;
       }
     }
   }
